@@ -6,6 +6,7 @@
 	(epackage-devel-generate-examples): New.
 	(epackage-devel-compose-package-dir): Use
 	`epackage-devel-generate-examples'.
+	(epackage-devel-generate-uninstall): New.
 
 2011-12-13 Wed  Jari Aalto  <jari.aalto@cante.net>
 
